force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Accessibility_Bugs_Closed__c.field-meta.xml
<CustomField>
    <fullName>Accessibility_Bugs_Closed__c</fullName>
    <inlineHelpText>Are all Accessibility bugs closed?</inlineHelpText>
    <label>Accessibility Bugs Closed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>No Applicable UI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>