force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Accessibility_Dashboard_link__c.field-meta.xml
<CustomField>
    <fullName>Accessibility_Dashboard_link__c</fullName>
    <description>Link to Accessibility Dashboard</description>
    <formula>HYPERLINK(&#39;https://gus.my.salesforce.com/01ZB00000008jrd&#39;,&#39;Accessibility Dashboard Link&#39;)</formula>
    <label>Accessibility Dashboard link</label>
    <type>Text</type>
</CustomField>