force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/All_New_Features_DONE__c.field-meta.xml
<CustomField>
    <fullName>All_New_Features_DONE__c</fullName>
    <description>All new product development meets the Definition Of Done.</description>
    <inlineHelpText>All new product development meets the Definition Of Done:  https://sites.google.com/a/salesforce.com/adm/definition-of-done?AuthEventSource=SSO</inlineHelpText>
    <label>Features Meet Definition of Done</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>False</fullName>
                <default>true</default>
                <label>False</label>
            </value>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>