force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/All_Security_Bugs_Closed__c.field-meta.xml
<CustomField>
    <fullName>All_Security_Bugs_Closed__c</fullName>
    <inlineHelpText>P012 Security Bugs are closed or approved by ProdSec in the release that is open at the time of their discovery.</inlineHelpText>
    <label>All Security Bugs Closed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>