force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/All_Security_Stories_Closed__c.field-meta.xml
<CustomField>
    <fullName>All_Security_Stories_Closed__c</fullName>
    <label>All Security Stories Closed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>