force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/All_Supported_one_app_Browsers_Tested__c.field-meta.xml
<CustomField>
    <fullName>All_Supported_one_app_Browsers_Tested__c</fullName>
    <description>Used to track if teams who have features that are surfaced in the S1 Mobile application have tested their functionality on one.app of all the supported browsers (as per the current S1 Support Matrix).</description>
    <inlineHelpText>Has the team tested their functionality on one.app for all the supported browsers as per the current S1 Support Matrix?</inlineHelpText>
    <label>Release Tested on all one.app Browsers</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A for this team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>