force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Automated_Tests_Annotated__c.field-meta.xml
<CustomField>
    <fullName>Automated_Tests_Annotated__c</fullName>
    <inlineHelpText>Percent of existing automated tests that have been annotated.  FF criterion is at least 60%.</inlineHelpText>
    <label>% Automated Tests Annotated (&gt;=80%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>