force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Biz_SOX_Compliance_Met__c.field-meta.xml
<CustomField>
    <fullName>Biz_SOX_Compliance_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Legal, tax, regulatory, regional, Business SOX compliance met.  Business SOX narratives have been updated or plan to be updated as appropriate.</inlineHelpText>
    <label>Biz SOX Compliance Met</label>
    <type>Checkbox</type>
</CustomField>