force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Bugs_TF_Fixed_the_Week_of_Feature_Freeze__c.field-meta.xml
<CustomField>
    <fullName>Bugs_TF_Fixed_the_Week_of_Feature_Freeze__c</fullName>
    <description>Bugs/TF Fixed the Week of Feature Freeze (explain if count is high relative to previous 2-3 weeks)</description>
    <inlineHelpText>Bugs/TF Fixed the Week of Feature Freeze (explain if count is high relative to previous 2-3 weeks)</inlineHelpText>
    <label>Bugs/TF Fixed the Week of Feature Freeze</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>