force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Changes_to_Logging__c.field-meta.xml
<CustomField>
    <fullName>Changes_to_Logging__c</fullName>
    <description>Any changes to the way things are logged?</description>
    <inlineHelpText>Any changes to the way things are logged?</inlineHelpText>
    <label>Changes to Logging</label>
    <type>TextArea</type>
</CustomField>