force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Code_Line_is_Potentially_Releasable__c.field-meta.xml
<CustomField>
    <fullName>Code_Line_is_Potentially_Releasable__c</fullName>
    <description>Code Line is Potentially Releasable – All New Features and Enhancements meet the Definition of Done and Code Line meets Bug/TF Criteria below (Yes/No)</description>
    <inlineHelpText>Code Line is Potentially Releasable – All New Features and Enhancements meet the Definition of Done and Code Line meets Bug/TF Criteria below (Yes/No)</inlineHelpText>
    <label>Code Line is Potentially Releasable</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>