force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Confirmed_not_on_BM_Top_10_List__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_not_on_BM_Top_10_List__c</fullName>
    <description>Team must confirm that they are not on the Buildmaster&#39;s Top 10 sheet:

https://docs.google.com/a/salesforce.com/spreadsheet/ccc?key=0AkkHOEHyPs0CdG54akZNN2FCektGSllIOENCVk8zUlE#gid=0</description>
    <inlineHelpText>Has team confirmed that it is not on the Buildmaster&#39;s Top 10 list?</inlineHelpText>
    <label>Confirmed not on BM Top 10 List?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>