force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Core_Release_against_Hybrid_Apps_in_Dev__c.field-meta.xml
<CustomField>
    <fullName>Core_Release_against_Hybrid_Apps_in_Dev__c</fullName>
    <description>Used to track if teams who have features that are surfaced in the S1 Mobile application have tested the S1 application *currently being developed* (all supported Hybrid Containers, as per the current S1 Support Matrix) against the new core Major Release that is being developed.</description>
    <inlineHelpText>Has the team certified the Core Major Release candidate against all versions of the supported Hybrid Containers that are in development to be part of the S1 Major Release as per the current S1 Support Matrix?  (e.g. iOS, Android, Windows)</inlineHelpText>
    <label>Release Tested on in-dev S1 Hybrid Apps</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A for this team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>