force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Dependencies_on_other_teams_closed__c.field-meta.xml
<CustomField>
    <fullName>Dependencies_on_other_teams_closed__c</fullName>
    <inlineHelpText>Dependencies from other teams = Closed</inlineHelpText>
    <label>Dependencies from other teams closed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>