force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Dev_Leadership_Confirmation_Details__c.field-meta.xml
<CustomField>
    <fullName>Dev_Leadership_Confirmation_Details__c</fullName>
    <description>For the Engineering Cloud Lead (or their delegate) to optionally leave details regarding the Team Signoff Status.</description>
    <inlineHelpText>For the Engineering Cloud Lead (or their delegate) to optionally leave details regarding the Team Signoff Status.</inlineHelpText>
    <label>Cloud Leadership Confirmation Details</label>
    <type>TextArea</type>
</CustomField>