force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/EA_2Week_NotReady_Response__c.field-meta.xml
<CustomField>
    <fullName>EA_2Week_NotReady_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if: &quot;We may be the team that causes the release to be delayed.&quot;</inlineHelpText>
    <label>C</label>
    <type>Checkbox</type>
</CustomField>