force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/EA_2Week_Ready_Label__c.field-meta.xml
<CustomField>
    <fullName>EA_2Week_Ready_Label__c</fullName>
    <formula>&quot;At Feature Freeze, we’ll be ready to release to GS0 and provide a great experience for internal and external users. If necessary, we will disable incomplete features at Feature Freeze.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>A</label>
    <type>Text</type>
</CustomField>