force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/EA_2Week_Risk_Comment__c.field-meta.xml
<CustomField>
    <fullName>EA_2Week_Risk_Comment__c</fullName>
    <inlineHelpText>Explain your proposed alternative solution and any assistance you need.</inlineHelpText>
    <label>Comments or assistance needed</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>