force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/EA_2Week_Risk_Response__c.field-meta.xml
<CustomField>
    <fullName>EA_2Week_Risk_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if: &quot;Excluding hammer tests, we probably won&#39;t be done at Feature Freeze but we can release if we can come up with an alternative solution.&quot;</inlineHelpText>
    <label>B</label>
    <type>Checkbox</type>
</CustomField>