force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/EA_6Week_NotReady_Comment__c.field-meta.xml
<CustomField>
    <fullName>EA_6Week_NotReady_Comment__c</fullName>
    <inlineHelpText>Explain what your next steps are and what assistance you need.</inlineHelpText>
    <label>Next steps or assistance needed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>