force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/EA_Perm_Label__c.field-meta.xml
<CustomField>
    <fullName>EA_Perm_Label__c</fullName>
    <formula>&quot;Does your team have changes which are NOT being developed behind a perm OR are part of a Dark Launch? If yes, explain what are these changes?&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>3</label>
    <type>Text</type>
</CustomField>