force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/EA_Perm_Response__c.field-meta.xml
<CustomField>
    <fullName>EA_Perm_Response__c</fullName>
    <description>Reponse for: Does your team have changes which are NOT being developed behind a perm OR are part of a Dark Launch? If yes, explain what are these changes?</description>
    <inlineHelpText>Enter response for: &quot;Does your team have changes which are NOT being developed behind a perm OR are part of a Dark Launch? If yes, explain what are these changes?&quot;</inlineHelpText>
    <label>Perm Response</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>