force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/EA_Split_Label__c.field-meta.xml
<CustomField>
    <fullName>EA_Split_Label__c</fullName>
    <formula>&quot;If your team owns a Split Script, have you reviewed it for the next release?  If your team is in the &quot; + HYPERLINK(&quot;https://docs.google.com/a/salesforce.com/document/d/1hyi8m80Gh-N0PulD4LaaC9GNidxHl2FIke3a-gVPDQ8/edit#&quot;,&quot;Split Risk Group&quot;) + &quot;, have you verified that your feature set will continue to work after the next split?&quot; +  BR() + BR()+ &quot;Has your team completed the required BUTC/Maven work?&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>4</label>
    <type>Text</type>
</CustomField>