force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/EA_Split_Response__c.field-meta.xml
<CustomField>
    <fullName>EA_Split_Response__c</fullName>
    <description>Response for: If your team owns a Split Script, have you reviewed it for the next release?  If your team is in the Split Risk Group, have you verified that your feature set will continue to work after the next split?
Has your team completed the required BUTC/Maven work?</description>
    <inlineHelpText>If team owns a Split Script, have you reviewed it for the next release?  If your team is in the Split Risk Group, have you verified that your feature set will continue to work after the next split? Has your team completed the required BUTC/Maven work?</inlineHelpText>
    <label>Split Response</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>