force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/EA_Test_Label__c.field-meta.xml
<CustomField>
    <fullName>EA_Test_Label__c</fullName>
    <formula>&quot;Does your team have adequate test coverage for any re-factoring work that is being done? If not, what is your plan to add test coverage?&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2</label>
    <type>Text</type>
</CustomField>