force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Expalin_if_Team_is_Yellow_Red__c.field-meta.xml
<CustomField>
    <fullName>Expalin_if_Team_is_Yellow_Red__c</fullName>
    <inlineHelpText>Please provide details on why the team is in Yellow or Red status in  terms of meeting FF</inlineHelpText>
    <label>Explain if Team is Yellow or Red</label>
    <type>TextArea</type>
</CustomField>