force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_Automated_Tests_Annotated__c.field-meta.xml
<CustomField>
    <fullName>Explain_Automated_Tests_Annotated__c</fullName>
    <description>Explain if the %Automated Tests Annotated is less than 80%</description>
    <inlineHelpText>Explain if the %Automated Tests Annotated is less than 80%</inlineHelpText>
    <label>Explain % Automated Tests Annotated</label>
    <type>TextArea</type>
</CustomField>