force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_Bugs_TF_to_Fix__c.field-meta.xml
<CustomField>
    <fullName>Explain_Bugs_TF_to_Fix__c</fullName>
    <description>Explain if Total Number of Bugs/TF to Fix exceeds maximum 2 per Full-Time Developer</description>
    <inlineHelpText>Explain if Total Number of Bugs/TF to Fix exceeds maximum 2 per Full-Time Developer</inlineHelpText>
    <label>Explain Bugs/TF to Fix</label>
    <type>TextArea</type>
</CustomField>