force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Explain_Code_Line_is_Potentially_Releasa__c.field-meta.xml
<CustomField>
    <fullName>Explain_Code_Line_is_Potentially_Releasa__c</fullName>
    <description>Explain Code Line is Potentially Releasable – All New Features and Enhancements meet the Definition of Done and Code Line meets Bug/TF Criteria below (Yes/No)</description>
    <inlineHelpText>Explain Code Line is Potentially Releasable – All New Features and Enhancements meet the Definition of Done and Code Line meets Bug/TF Criteria below (Yes/No)</inlineHelpText>
    <label>Explain if not Potentially Releasable</label>
    <type>TextArea</type>
</CustomField>